[project]
name = "tools"
version = "0.1.0"
description = "Miscellaneous python tools"
authors = [
    {name = "Kelvin Tuong", email="zkt22@cam.ac.uk"},
]
requires-python = '>= 3.7'
dependencies = [
    'pandas>=1.2.4',
    'numpy>=1.21.6',
    'matplotlib>=3.5.2',
    'scanpy>=1.7.1',
    'anndata>=0.7.6',
]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
readme = {file = "README.md"}

[build-system]
requires = [
    'flit_core >=2,<4',
    'setuptools_scm',
    'pytoml',
    'wheel',
    'importlib_metadata>=0.7; python_version < "3.8"'
]
build-backend = 'flit_core.buildapi'
