[tool.poetry]
name = "kttools"
version = "0.2.1"
description = "Kelvin's miscellaneous tools for python"
authors = ["Zewen Kelvin Tuong <z.tuong@uq.edu.au>"]
license = "MIT"
readme = "README.rst"
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
packages = [{ include = "tools" }]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.2.4"
numpy = ">=1.21.6"
matplotlib = ">=3.5.2"
scanpy = ">=1.7.1"
anndata = ">=0.7.6"
sphinx-autodoc-typehints = { optional = true, version = "*" }
sphinx_rtd_theme = { optional = true, version = "*" }
readthedocs-sphinx-ext = { optional = true, version = "*" }
recommonmark = { optional = true, version = "*" }

[tool.poetry.extras]
docs = [
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "readthedocs-sphinx-ext",
    "recommonmark",
]

[tool.poetry.group.dev.dependencies]
setuptools-scm = { extras = ["toml"], version = "^7.1.0" }
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
